--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p ./tsconfig.json && tsc -p ./tsconfig-cjs.json",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register '**/*.test.ts'"
   },
   "devDependencies": {
+    "@types/chai": "4.3.1",
+    "@types/mocha": "9.1.1",
+    "chai": "4.3.6",
+    "mocha": "10.0.0",
     "prettier": "2.6.2",
+    "ts-node": "10.7.0",
     "typescript": "4.6.4"
   }
 }
